Use rem spacing to fix weird font issues on mobile

--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed");
 @import url("https://fonts.googleapis.com/css?family=Fira+Sans+Condensed");
+html {
+  font-size: 16px;
+}
 * {
-  margin-top: 0px;
-  margin-bottom: 0px;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
 }
 body {
   width: auto;
@@ -28,43 +31,44 @@ strong {
   font-weight: bold;
 }
 hr {
-  -webkit-margin-before: 0.2em;
-          margin-block-start: 0.2em;
-  -webkit-margin-after: 0.65em;
-          margin-block-end: 0.65em;
-  height: 1px;
+  -webkit-margin-before: 0.2rem;
+          margin-block-start: 0.2rem;
+  -webkit-margin-after: 0.65rem;
+          margin-block-end: 0.65rem;
+  height: 0.01rem;
   color: #0e0e0e;
   background-color: #0e0e0e;
   border-style: solid;
 }
 header {
   color: #0e0e0e;
-  font-size: 0.9em;
+  font-size: 0.9rem;
   vertical-align: center;
 }
 header h1 {
   display: inline;
   text-transform: capitalize;
   font-weight: 400;
+  font-size: 1.8rem;
 }
 header i#github,
 header i#linkedin,
 header i#email-address,
 header i#phone-number {
-  font-size: 1.38em;
-  padding-left: 1.15em;
+  font-size: 1.38rem;
+  padding-left: 1.15rem;
 }
 header a {
   text-decoration: none;
   color: #000;
 }
 section.cv-section {
-  margin-top: 0.8em;
+  margin-top: 0.8rem;
 }
 section.cv-section div.cv-section-title {
   font-family: 'Fira Sans Condensed', sans-serif;
   color: #0e0e0e;
-  font-size: 1.3em;
+  font-size: 1.3rem;
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -79,19 +83,20 @@ section.cv-section ul.no-indent div.chronological-event {
 section.cv-section ul.no-indent span.company-name,
 section.cv-section ul.no-indent span.university-name {
   font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 1.01rem;
   font-weight: bold;
-  margin-bottom: 0.15em;
+  margin-bottom: 0.15rem;
 }
 section.cv-section ul.no-indent span.degree {
-  padding-bottom: 0.8em;
+  padding-bottom: 0.8rem;
 }
 section.cv-section table#technical-skills {
-  border-spacing: 1.2em 0.15em;
+  border-spacing: 1.2rem 0.15rem;
 }
 section.cv-section table#technical-skills th {
   vertical-align: top;
   text-align: right;
-  width: 9.9em;
+  width: 9.9rem;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: bold;
 }
@@ -99,7 +104,7 @@ section.cv-section table#technical-skills td {
   text-align: left;
 }
 section.cv-section ul > li.listing {
-  margin-bottom: 0.8em;
+  margin-bottom: 0.8rem;
 }
 section.cv-section ul {
   list-style: disc;
